foundation-objs/main/default/objects/Log_Task__c/Log_Task__c.object-meta.xml
<CustomObject>
    <label>Log Task</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Task Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>