foundation-objs/main/default/objects/Log_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project / Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Log Tasks</relationshipLabel>
    <relationshipName>Log_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>