foundation-objs/main/default/objects/Log_Task__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Log Tasks</relationshipLabel>
    <relationshipName>Log_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>