foundation-objs/main/default/objects/Log_Task__c/fields/Category_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Service__c</fullName>
    <label>Category of Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST - Advisory</fullName>
            </value>
            <value>
                <fullName>GST - Airline Credit</fullName>
            </value>
            <value>
                <fullName>GST - Compliance</fullName>
            </value>
            <value>
                <fullName>GST - Litigation Support</fullName>
            </value>
            <value>
                <fullName>GST - Other Services</fullName>
            </value>
            <value>
                <fullName>GST - Reconciliation</fullName>
            </value>
            <value>
                <fullName>GST - Refund</fullName>
            </value>
            <value>
                <fullName>GST - Registration</fullName>
            </value>
            <value>
                <fullName>GSTR - 9 &amp; 9C - Historical Periods</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Knowledge Management</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Meetings</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Support SBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>