foundation-objs/main/default/objects/Log_Task__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>E-Inv &amp; EWB</fullName>
            </value>
            <value>
                <fullName>Max ITC</fullName>
            </value>
            <value>
                <fullName>Clear e-invoiceing</fullName>
            </value>
            <value>
                <fullName>Clear Capture</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>Managed Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>