foundation-objs/main/default/objects/Log_Task__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_of_Service__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline Credit</fullName>
            </value>
            <value>
                <fullName>Call with Product Team</fullName>
            </value>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>GST - Client Queries</fullName>
            </value>
            <value>
                <fullName>GST - Internal Discussion</fullName>
            </value>
            <value>
                <fullName>GST - New Client Meeting</fullName>
            </value>
            <value>
                <fullName>GST - POC</fullName>
            </value>
            <value>
                <fullName>GST - Training</fullName>
            </value>
            <value>
                <fullName>GST Advisory</fullName>
            </value>
            <value>
                <fullName>GST Other Services (Comment)</fullName>
            </value>
            <value>
                <fullName>GST Registration</fullName>
            </value>
            <value>
                <fullName>GSTR 1</fullName>
            </value>
            <value>
                <fullName>GSTR 2B Reconciliation</fullName>
            </value>
            <value>
                <fullName>GSTR 3B</fullName>
            </value>
            <value>
                <fullName>GSTR 9 &amp; 9C</fullName>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Issue - Identification</fullName>
            </value>
            <value>
                <fullName>ITR - Filings</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Liasoning</fullName>
            </value>
            <value>
                <fullName>Litigation Support</fullName>
            </value>
            <value>
                <fullName>New Product Initiatives</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Vendor Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>