foundation-objs/main/default/objects/Log_Task__c/fields/Task_CSM__c.field-meta.xml
<CustomField>
    <fullName>Task_CSM__c</fullName>
    <label>Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Retraining</fullName>
            </value>
            <value>
                <fullName>Support/escalation meetings (Non Tech)</fullName>
            </value>
            <value>
                <fullName>Ticket Management</fullName>
            </value>
            <value>
                <fullName>Cross Function Coordination</fullName>
            </value>
            <value>
                <fullName>Renewal Meetings</fullName>
            </value>
            <value>
                <fullName>Product bugs</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>