foundation-objs/main/default/objects/Log_Task__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aayush Sharma</fullName>
            </value>
            <value>
                <fullName>Abhishek Singh Chauhan</fullName>
            </value>
            <value>
                <fullName>Ajay Adhik Achare</fullName>
            </value>
            <value>
                <fullName>Amit Bhatia</fullName>
            </value>
            <value>
                <fullName>Amod Chandrakant Shinde</fullName>
            </value>
            <value>
                <fullName>Ankit Jain</fullName>
            </value>
            <value>
                <fullName>Anuj Dewan</fullName>
            </value>
            <value>
                <fullName>Arunachalam S</fullName>
            </value>
            <value>
                <fullName>Arvind Lagisetty</fullName>
            </value>
            <value>
                <fullName>Ashish Jagdish Shetty</fullName>
            </value>
            <value>
                <fullName>Ashutosh Sharma</fullName>
            </value>
            <value>
                <fullName>Bablu Mazumdar</fullName>
            </value>
            <value>
                <fullName>Bhavin Nagda</fullName>
            </value>
            <value>
                <fullName>Bishwadeep Agarwal</fullName>
            </value>
            <value>
                <fullName>Eshaan Khurana</fullName>
            </value>
            <value>
                <fullName>Gagan Deep</fullName>
            </value>
            <value>
                <fullName>Garima Pawan Agarwal</fullName>
            </value>
            <value>
                <fullName>Girish S</fullName>
            </value>
            <value>
                <fullName>Golechha Mohit Jain</fullName>
            </value>
            <value>
                <fullName>Harshvardhan Kailash Jindal</fullName>
            </value>
            <value>
                <fullName>Hemalatha Umesh</fullName>
            </value>
            <value>
                <fullName>Hitesh Batra</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Jay Hemant Shukla</fullName>
            </value>
            <value>
                <fullName>Karthik Ramesh</fullName>
            </value>
            <value>
                <fullName>Kasetty Rahul Das</fullName>
            </value>
            <value>
                <fullName>Kinjal Chetan Gala</fullName>
            </value>
            <value>
                <fullName>Mayank Saini</fullName>
            </value>
            <value>
                <fullName>Megha Ravishankar</fullName>
            </value>
            <value>
                <fullName>Mohit Goyal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>