foundation-objs/main/default/objects/Log_Task__c/recordTypes/CSM_Task.recordType-meta.xml
<RecordType>
    <fullName>CSM_Task</fullName>
    <active>true</active>
    <label>CSM Task</label>
</RecordType>