foundation-objs/main/default/objects/Log_Task__c/validationRules/Date_Criteria_Timesheet.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Criteria_Timesheet</fullName>
    <active>true</active>
    <errorConditionFormula>(
Date__c &lt;  Asset__r.MS_Start_Date__c || 
Date__c &gt;  (Asset__r.MS_End_Date__c + 30 )
)</errorConditionFormula>
    <errorMessage>Please ensure date entered is not older than 30 days from today and it is between MS Start Date and MS End Date</errorMessage>
</ValidationRule>