foundation-objs/main/default/objects/Log_Task__c/validationRules/Restrict_Billable_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Billable_Category</fullName>
    <active>true</active>
    <errorConditionFormula>Asset__r.AccountId = &apos;0012x00000ATf7A&apos; &amp;&amp;  
 TEXT(Category__c) &lt;&gt; &apos;Non Billable&apos;</errorConditionFormula>
    <errorMessage>Please select Non Billable category</errorMessage>
</ValidationRule>